--- a/style.css
+++ b/style.css
@@ -401,19 +401,28 @@ footer .lienlac a:hover {
   overflow: hidden;
 }
 
-.video-section video {
-  width: 100%;
-  max-width: 1500px;
-  outline: none;
-  margin-top: 10px;
-
-/* Tạo dải mờ ở trên và dưới */
+.video-player-container {
+position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* Tỷ lệ 16:9 (9 / 16 = 0.5625) */
+    height: 0;
+    overflow: hidden;
+    background-color: #000; /* Hiển thị màu đen khi video đang tải */
+    /* Tạo dải mờ ở trên và dưới */
     -webkit-mask-image: 
         linear-gradient(to bottom, transparent, black 5%, black 95%, transparent);
     
     /* Thuộc tính chuẩn (lặp lại) */
     mask-image: 
         linear-gradient(to bottom, transparent, black 5%, black 95%, transparent);
+}
+.video-player-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none; /* Bỏ viền mặc định của iframe */
 }
 .video-wrapper video {
   width: 100%;
@@ -836,3 +845,4 @@ footer .lienlac a:hover {
       font-size: 11px;
     }
 }
+
