--- a/style.css
+++ b/style.css
@@ -31,6 +31,36 @@ header{
     font-size: 10px;
     font-weight: 600;
 }
+.card::before{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 600px; 
+    height: 600px;
+    margin-left: -300px;
+    margin-top: -300px;
+    border-radius: 50%;
+    z-index: -2; 
+    will-change: transform;
+    background: conic-gradient(transparent, transparent, transparent, #00b7ff, #ff30ff);
+    animation: rotate 4s linear infinite;
+}
+@keyframes rotate {
+    form{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
+.card::after{
+    content: "";
+    position: absolute;
+    inset: 5px;
+    background: #ffffff;
+    border-radius: 10px;
+}
 
 #ntlg{
     display: flex;
@@ -172,13 +202,21 @@ input:focus {
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px); 
   border: 1px solid #1932A8; 
+  z-index: 2;
 }
-
+.card-img{
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    z-index: 2;
+}
 .card-img img {
   width: 100%;
   height: 180px;
   object-fit: cover;
   display: block;
+  z-index: 2;
+  border-radius: 10px 10px 0 0;
 }
 
 .card-text {
@@ -187,23 +225,27 @@ input:focus {
     flex: 1;
     margin-left: 5px;
     margin-right: 5px;
+    z-index: 2;
 }.card-text h3 {
     font-family: "Montserrat";
     font-weight: 900;
     margin: 0 0 10px 0;
     font-size: 18px;
     color: #1932A8;
+    z-index: 2;
 }
 .card-text p {
     font-size: 14px;
     font-family: "Montserrat";
     font-weight: 700;
     color: #1932A8;
+    z-index: 2;
 }
 
 .card-footer {
   padding: 15px;
   padding-top: 0;
+  z-index: 2;
 }
 
 .card-footer a {
@@ -425,6 +467,7 @@ position: relative;
     height: 100%;
     border: none; /* Bỏ viền mặc định của iframe */
 }
+
 .video-wrapper video {
   width: 100%;
   height: auto;
@@ -760,6 +803,10 @@ position: relative;
     header {
         padding: 8px;
     }
+    #namelogo {
+        font-size: 7px;
+        text-align: center;
+    }
     #logo {
         margin-right: 10px;
     }
@@ -846,5 +893,3 @@ position: relative;
       font-size: 11px;
     }
 }
-
-
