--- a/style.css
+++ b/style.css
@@ -212,7 +212,8 @@ input:focus {
 }
 .card-img img {
   width: 100%;
-  height: 180px;
+  height: auto; 
+  aspect-ratio: 16/9;
   object-fit: cover;
   display: block;
   z-index: 2;
@@ -834,6 +835,9 @@ position: relative;
     }
     .card {
         width: 95%; /* Các thẻ tự xếp thành 1 cột */
+        max-width: 340px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     /* --- Footer Audio --- */
@@ -893,3 +897,4 @@ position: relative;
       font-size: 11px;
     }
 }
+
