--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
+* {
+    box-sizing: border-box;
+}
 html, body {
     margin: 0;
     padding: 0;
@@ -36,10 +38,10 @@ header{
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 600px; 
-    height: 600px;
-    margin-left: -300px;
-    margin-top: -300px;
+    width: 150%; 
+    height: 150%;
+    margin-left: -75%;
+    margin-top: -75%;
     border-radius: 50%;
     z-index: -2; 
     background: #e0e0e0;
@@ -902,6 +904,7 @@ position: relative;
       font-size: 11px;
     }
 }
+
 
 
 
