--- a/style.css
+++ b/style.css
@@ -676,28 +676,6 @@ position: relative;
         align-items: flex-start;
         text-align: left;
     }
-    .card {
-      z-index: 0;
-    }
-    .card-img{
-        z-index: 0;
-    }
-    .card-img img {
-      z-index: 0;
-    }
-    
-    .card-text {
-        z-index: 0;
-    }.card-text h3 {
-        z-index: 0;
-    }
-    .card-text p {
-        z-index: 0;
-    }
-
-    .card-footer {
-        z-index: 0;
-    }
     .card::before {
         display: none !important;    /* Ẩn hoàn toàn khỏi cấu trúc trang */
         animation: none !important;  /* Tắt hoàn toàn chuyển động */
@@ -910,9 +888,9 @@ position: relative;
         padding: 8px 6px; /* Giảm đệm ngang */
     }
     .search-bar {
-        margin-left: 20px;
-        flex-direction: column; /* Xếp dọc */
-        width: 80%;
+        margin: 20px auto;
+        flex-direction: column; 
+        width: 90%;
     }
     .search-bar input,
     .custom-select {
@@ -945,6 +923,7 @@ position: relative;
       font-size: 11px;
     }
 }
+
 
 
 
