--- a/style.css
+++ b/style.css
@@ -197,15 +197,16 @@ input:focus {
   justify-content: center;
 }
 .card {
-  background:#ffffff;   
-  border-radius: 12px;
-  overflow: hidden;
-  width: 300px; 
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.852);
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #1932A8; 
-  z-index: 2;
+      background:#ffffff;   
+      border-radius: 12px;
+      overflow: hidden;
+      width: 300px; 
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.852);
+      display: flex;
+      flex-direction: column;
+    border: 1px solid #1932A8; 
+    z-index: 2;
+    position: relative;
 }
 .card-img{
     margin-left: 5px;
@@ -926,6 +927,7 @@ position: relative;
       font-size: 11px;
     }
 }
+
 
 
 
